--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    background-color: #7675d698;
+    /* background-color: #7675d698; */
+    background-color: black;
 }
 
 h1 {
