--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ h1 {
     color: white;
 }
 
+a {
+    color: #F09819;
+    cursor: pointer;
+}
+
 .status {
     display: flex;
     position: absolute;
@@ -35,5 +40,7 @@ h1 {
 }
 
 #food {
-    background-color: brown;
+    height: 100px;
+    width: 100px;
+    position: absolute;
 }
